bug fix: fixed label text overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,11 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .body,
 .body-dark {
+  margin: 0;
   font-family: "Poppins", "sans-serif";
   min-height: 100vh;
   padding: 1.2em;
@@ -70,6 +70,8 @@
   justify-content: center;
   align-items: center;
   min-width: 25%;
+  max-width: 50%;
+  margin: 0 auto;
 }
 
 .todo-list {
@@ -83,7 +85,6 @@
   font-size: 1.5rem;
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   font-size: 1.5rem;
 }
 
@@ -128,4 +129,6 @@
 .todo label {
   padding: 0.4em 0.5em;
   min-width: 25%;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
